# Philomath

./: .gitignore  CMakeLists.txt  README.md
example/: main.c
source/: common.c  common.h  csv.c  csv.h  dataset.c  dataset.h  knn.c  knn.h  linreg.c  linreg.h  preprocessor.c  preprocessor.h  result.c  result.h
tests/: helpers.c  helpers.h  test_csv.c  test_dataset.c  test_preprocessor.c
